--- a/TeklaOpenApiHowTo/TeklaOpenApiHowTo.csproj
+++ b/TeklaOpenApiHowTo/TeklaOpenApiHowTo.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExportIfc4.cs" />
     <Compile Include="FindOutSolidsIntersect.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
