--- a/TeklaOpenApiHowTo/TeklaOpenApiHowTo.csproj
+++ b/TeklaOpenApiHowTo/TeklaOpenApiHowTo.csproj
@@ -76,6 +76,7 @@
     <Compile Include="InsertAlignedText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransformPointToAnotherTransformationPlane.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
